--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Aptauja</title>
-
+    <h1 style="color: aqua;">Olegs</h1>
     <script>
        function izvaditVarduUzvardu() {
     var vards = document.getElementById("vards").value;
